03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress-nginx
  annotations:
    # nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  namespace: default
spec:
  rules:
    - host: nginx.info
      http:
        paths:
          - path: /.*
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
    - host: sonarqube
      http:
        paths:
          - path: /.*
            pathType: Prefix
            backend:
              service:
                name: sonarqube
                port:
                  number: 9000
